02-intermediate/14-security-rbac/manifests/configmap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-web-service
  namespace: secure-app
spec:
  selector:
    app: secure-web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
